# pipewire-wrapper

./: Cargo.toml  README.md
.github/workflows/: github-ci.yml  github-doc-deploy.yml
examples/: audio_dsp_filter.rs  audio_src.rs  list_device_route_info.rs  list_node_volume_controls.rs  video_src.rs
examples/pipewire-sdl-video-player/: Cargo.toml
examples/pipewire-sdl-video-player/src/: main.rs
pipewire-wrapper-macro-impl/: Cargo.toml
pipewire-wrapper-macro-impl/src/: derive_raw_wrapper.rs  derive_wrapper.rs  interface.rs  lib.rs  macro_rules.rs  object_type_impl.rs  proxy_wrapper.rs  spa_interface.rs
pipewire-wrapper-proc-macro/: Cargo.toml
pipewire-wrapper-proc-macro/src/: lib.rs
src/: LICENSE  README.md  core_api.rs  error.rs  filter.rs  impl_api.rs  lib.rs  listeners.rs  macro_rules.rs  spa.rs  state.rs  stream.rs  wrapper.rs
src/core_api/: client.rs  client_info.rs  context.rs  core.rs  data_loop.rs  device.rs  factory.rs  link.rs  loop_.rs  main_loop.rs  node.rs  permissions.rs  port.rs  properties.rs  proxy.rs  registry.rs  type_info.rs
src/core_api/client/: events.rs  info.rs
src/core_api/context/: events.rs
src/core_api/core/: events.rs  info.rs
src/core_api/device/: events.rs  info.rs
src/core_api/factory/: events.rs  info.rs
src/core_api/link/: events.rs  info.rs
src/core_api/loop_/: channel.rs
src/core_api/node/: events.rs  info.rs
src/core_api/port/: events.rs  info.rs
src/core_api/proxy/: events.rs
src/core_api/registry/: events.rs
src/filter/: events.rs
src/impl_api/: data_loop.rs  global.rs  impl_client.rs  impl_core.rs  protocol.rs  work_queue.rs
src/impl_api/protocol/: implementation.rs
src/spa/: buffers.rs  dict.rs  handle.rs  interface.rs  io.rs  list.rs  loop_.rs  param.rs  pod.rs  support.rs  system.rs  thread.rs  type_.rs
src/spa/buffers/: chunk.rs  data.rs  meta.rs
src/spa/loop_/: utils.rs
src/spa/pod/: array.rs  bitmap.rs  bytes.rs  choice.rs  control.rs  id.rs  iterator.rs  object.rs  pod_buf.rs  pointer.rs  restricted.rs  sequence.rs  string.rs  struct_.rs
src/spa/pod/choice/: enum_.rs  flags.rs  none.rs  range.rs  step.rs
src/spa/pod/object/: enum_format.rs  format.rs  param_buffers.rs  param_io.rs  param_latency.rs  param_meta.rs  param_port_config.rs  param_process_latency.rs  param_profile.rs  param_route.rs  profiler.rs  prop.rs  prop_info.rs
src/spa/type_/: pod.rs
src/spa/type_/pod/: array.rs  bitmap.rs  bytes.rs  choice.rs  control.rs  format.rs  id.rs  iterator.rs  object.rs  pod_buf.rs  pointer.rs  restricted.rs  sequence.rs  string.rs  struct_.rs
src/spa/type_/pod/choice/: enum_.rs  flags.rs  none.rs  range.rs  step.rs
src/spa/type_/pod/object/: format.rs  param_buffers.rs  param_io.rs  param_latency.rs  param_meta.rs  param_port_config.rs  param_process_latency.rs  param_profile.rs  param_route.rs  profiler.rs  prop.rs  prop_info.rs
src/state/: client_state.rs  device_state.rs  link_state.rs  node_state.rs  port_state.rs
src/stream/: buffer.rs  control.rs  events.rs  time.rs
tests/: context-tests.rs  core-tests.rs  main-loop-tests.rs  node-tests.rs  pipewire-integration-tests.rs  pipewire-tests.rs  port-tests.rs  state-tests.rs  wrapper-on-struct-with-ptr-field.rs
