[package]
name = "pipewire-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
description = "Rust bindings for PipeWire"
homepage = "https://pipewire.org"
keywords = ["pipewire", "bindings", "audio", "video", "multimedia"]
readme = "README.md"
license = "MIT"
categories = [
    "multimedia::audio",
    "multimedia::video",
    "os::linux-apis",
    "api-bindings",
]
repository = "https://github.com/antroids/pipewire-wrapper"

[dev-dependencies]
signal-hook = "0.3.15"

[workspace]
members = ["pipewire-wrapper-macro-impl", "pipewire-wrapper-proc-macro"]

[dependencies]
pipewire-wrapper-macro-impl = { version = "0", path = "pipewire-wrapper-macro-impl" }
pipewire-wrapper-proc-macro = { version = "0", path = "pipewire-wrapper-proc-macro" }
spa_sys = { package = "libspa-sys", version = "0.6.0" }
pw_sys = { package = "pipewire-sys", version = "0.6.0" }
bitflags = "2.3.1"
derive_builder = "0.12.0"
paste = "1.0.13"
