[package]
name = "pipewire-wrapper-macro-impl"
version = "0.1.1"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT"
description = "Attribute and prop macroses implementations for pipewire-wrapper crate"
repository = "https://github.com/antroids/pipewire-wrapper"

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full"] }
