[package]
name = "pipewire-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pipewire-macro-impl = { version = "0", path = "../pipewire-wrapper-macro-impl" }
proc-macro-error = "1.0.4"