[package]
name = "pipewire-wrapper-proc-macro"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT"
description = "Attribute and prop macroses declarations for pipewire-wrapper crate"

[lib]
proc-macro = true

[dependencies]
pipewire-macro-impl = { version = "0", path = "../pipewire-wrapper-macro-impl" }
proc-macro-error = "1.0.4"
