[package]
name = "pipewire-wrapper-proc-macro"
version = "0.1.2"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT"
description = "Attribute and prop macroses declarations for pipewire-wrapper crate"
repository = "https://github.com/antroids/pipewire-wrapper"

[lib]
proc-macro = true

[dependencies]
pipewire-wrapper-macro-impl = { version = "0", path = "../pipewire-wrapper-macro-impl" }
proc-macro-error = "1.0.4"
